# TaskMan

./: CMakeLists.txt
src/: ProcessManager.c  ProcessManager.h  ProcessView.c  ProcessView.h  colors.c  colors.h  main.c
